--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,18 +1,15 @@
-name: resume build CI
-
+name: Resume ci Build
 on:
   push:
     branches: [ "main" ]
   pull_request:
     branches: [ "main" ]
-
 jobs:
-
   build:
-
     runs-on: ubuntu-latest
-
     steps:
     - uses: actions/checkout@v4
-    - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Build the Docker image with tag
+      run: docker build . --file Dockerfile --tag my-image-name:${{github.run_number}}
+    - name: Build latest 
+      run: docker build . --file Dockerfile --tag my-image-name
